--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,24 +1,26 @@
 tasks:
-  # install terraform - https://developer.hashicorp.com/terraform/tutorials/aws-get-started/install-cli
-  - name: terraform
+  - name: setup
     before: |
+      # Install Terraform - https://developer.hashicorp.com/terraform/tutorials/aws-get-started/install-cli
       ./bin/terraform_cli_install.sh
-  #https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html
-  - name: Install AWS CLI
-    env:
-      AWS_CLI_AUTO_PROMPT: on-partial
-    before: |
+
+
+      # Install AWS CLI - https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html
       ./bin/aws_cli_install.sh
-    command: aws --version
-  # Python & Boto3 Install for AWS SDK
-  - name: python and boto3
-    before: |
+
+      # Install Python and Boto3
       sudo apt-get update
-      sudo apt-get install python3-pip
+      sudo apt-get install -y python3-pip
       pip3 install boto3
+    command: |
+      # Verify installations
+      terraform --version
+      aws --version
+      python3 --version
+      pip3 show boto3
 
 # Getting AWS Creds As ENV Variables
-  # export AWS_ACCESS_KEY_ID=
-  # export AWS_SECRET_ACCESS_KEY=
-  # export AWS_DEFAULT_REGION=eu-west-2
+# export AWS_ACCESS_KEY_ID=
+# export AWS_SECRET_ACCESS_KEY=
+# export AWS_DEFAULT_REGION=eu-west-2
 
